--- a/README
+++ b/README
@@ -1,2 +1,25 @@
-Textbook Companion project for FOSSEE, IIT Bombay written in Drupal 7
+#Textbook Companion project for FOSSEE, IIT Bombay written in Drupal 7
+<hr>
+##Name of Project: Website Development For Scilab Project
+##Name of Author: Akash Patil
+##Duration: May 2017 to July 2017(Ekalavya Internship, IIT Bombay 2017)
 
+##Introduction:
+<p>Scilab is an open source numerical computation package widely used in scientific and engineering applications.
+Through Scilab Textbook Companion (TBC) project, the codes for more than 500 textbooks are made available through this website.
+</p>
+
+##About Textbook Companion Module:
+<p>This module handles all the functions related to TBC project such as:
+<ul>
+<li>Managing TBC Proposal</li>
+<li>Managing Book</li>
+<li>Code Submissions</li>
+<li>Completed Book Download</li>
+<li>Converting Completed Book into pdf</li>
+<li>Email System</li>
+</ul>
+</p>
+
+##Documentation:
+<p>For detailed information please visit following link <link></p>
